--- a/src/app/order/[gameId]/order.css
+++ b/src/app/order/[gameId]/order.css
@@ -189,7 +189,9 @@
 }
 
 .sticky-sidebar {
-  /* removed sticky to allow natural scrolling */
+  position: sticky;
+  top: 100px;
+  align-self: start;
 }
 
 .summary-details {
